onclick function hinzugefügt

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </h1>
     <div id="data">
         <input type="text" id="text" placeholder="Neue Aufgabe Hinzufügen">
-        <button id="add">Hinzufügen</button>
+        <input type="checkbox" aria-label="sa">
+        <button id="btn_add" onclick="add()">Hinzufügen</button>
     </div>
     <div id="items">
     </div>
-    <img src="https://image.jimcdn.com/app/cms/image/transf/dimension=202x10000:format=jpg/path/s92a890d46cc9b2dd/image/id4c83f10236e183b/version/1725262204/image.jpg">
-</body>
+    </body>
 </html>
